--- a/_posts/0000-01-02-HaoWang95.md
+++ b/_posts/0000-01-02-HaoWang95.md
@@ -2,4 +2,4 @@
 layout: slide
 title: "Welcome to our second slide!"
 ---
-Your text
+Your text, new branch with new file, then create a pull request to merge
