--- a/_posts/0000-01-02-HaoWang95.md
+++ b/_posts/0000-01-02-HaoWang95.md
@@ -2,4 +2,5 @@
 layout: slide
 title: "Welcome to our second slide!"
 ---
-Your text, new branch with new file, then create a pull request to merge
+Your text, new branch with new file, then create a pull request to merge.
+Next step -> React + Nest.Js fullstack development. Use Nest.js asap, and refactor previously build react projects.
